[gd_scene load_steps=5 format=2]

[ext_resource path="res://bullets/Laser.gd" type="Script" id=1]
[ext_resource path="res://bullets/laser2.png" type="Texture" id=2]
[ext_resource path="res://effects/muzzleFlash2.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50.4248, 13.3594 )

[node name="Laser" type="Area2D"]
position = Vector2( 2.99368, -0.302799 )
collision_layer = 32
collision_mask = 2
script = ExtResource( 1 )

[node name="LaserSprite" type="Sprite" parent="."]
position = Vector2( 60.4632, -0.7417 )
texture = ExtResource( 2 )

[node name="Duration" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 58.521, 0 )
shape = SubResource( 1 )

[node name="MuzzleFlashSprite" type="Sprite" parent="."]
position = Vector2( -2.77962, 0.267765 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
offset = Vector2( 99.4936, 0.907252 )

[connection signal="area_entered" from="." to="." method="_on_Laser_area_entered"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
